--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,15 @@ services:
     #image: evns/grav
     build: .
     expose:
-      - "80:80"
+      - "80"
     environment:
-      - DOMAIN=    # set to your root/apex domain
+      - DOMAIN=new.vivariumnovum.net    # set to your root/apex domain
       - GENERATE_CERTS=false  # set to true to automatically setup trusted ssl with let's encrypt
-    env_files:
+    env_file:
       - ./frontend.env
       - ./grav.env
     volumes:
-      - ./backup:/var/www/grav-admin/
+      - ./backup:/var/www/grav-admin/backup
     networks:
       - frontend-web
 networks:
