configure compose, Dockerfile and startup script to gracefully handle user data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./grav.env
     volumes:
       - ./backup:/var/www/grav-admin/backup
+      - ./user:/var/www/grav-admin/user
     networks:
       - frontend-web
 networks:
